kustomize/manifests/app/frontend/istio-simulator/base/app-ns-3.yaml

apiVersion: v1
kind: Namespace
metadata:
  name: ns-3
  labels:
    istio-injection: enabled
    seed: "1001"
---
apiVersion: v1
kind: Service
metadata:
  name: cold-violet
  namespace: ns-3
  labels:
    app: cold-violet
    tier: "1"
    seed: "1001"
spec:
  selector:
    app: cold-violet
  ports:
  - name: http
    protocol: TCP
    port: 8080
    targetPort: 8080
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cold-violet-v1
  namespace: ns-3
  labels:
    app: cold-violet
    version: v1
    tier: "1"
    seed: "1001"
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
        app: cold-violet
        version: v1
  template:
    metadata:
      labels:
        app: cold-violet
        version: v1
      annotations:
        sidecar.istio.io/proxyMemoryLimit: "1Gi"
        sidecar.istio.io/proxyCPULimit: "2"
        sidecar.istio.io/proxyMemory: "128Mi"
        sidecar.istio.io/proxyCPU: "10m"
    spec:
      serviceAccountName: cold-violet
      containers:
      - name: cold-violet
        image: ghcr.io/nmnellis/fake-service:v2
        ports:
        - containerPort: 8080
        securityContext:
          runAsUser: 1001
        resources:
          requests:
            memory: "100Mi"
            cpu: "10m"
---
apiVersion: v1
kind: Service
metadata:
  name: crimson-thunder
  namespace: ns-3
  labels:
    app: crimson-thunder
    tier: "2"
    seed: "1001"
spec:
  selector:
    app: crimson-thunder
  ports:
  - name: http
    protocol: TCP
    port: 8080
    targetPort: 8080
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: crimson-thunder-v1
  namespace: ns-3
  labels:
    app: crimson-thunder
    version: v1
    tier: "2"
    seed: "1001"
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
        app: crimson-thunder
        version: v1
  template:
    metadata:
      labels:
        app: crimson-thunder
        version: v1
      annotations:
        sidecar.istio.io/proxyMemoryLimit: "1Gi"
        sidecar.istio.io/proxyCPULimit: "2"
        sidecar.istio.io/proxyMemory: "128Mi"
        sidecar.istio.io/proxyCPU: "10m"
    spec:
      serviceAccountName: crimson-thunder
      containers:
      - name: crimson-thunder
        image: ghcr.io/nmnellis/fake-service:v2
        ports:
        - containerPort: 8080
        securityContext:
          runAsUser: 1001
        resources:
          requests:
            memory: "100Mi"
            cpu: "10m"
---
apiVersion: v1
kind: Service
metadata:
  name: dark-frost
  namespace: ns-3
  labels:
    app: dark-frost
    tier: "5"
    seed: "1001"
spec:
  selector:
    app: dark-frost
  ports:
  - name: http
    protocol: TCP
    port: 8080
    targetPort: 8080
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dark-frost-v1
  namespace: ns-3
  labels:
    app: dark-frost
    version: v1
    tier: "5"
    seed: "1001"
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
        app: dark-frost
        version: v1
  template:
    metadata:
      labels:
        app: dark-frost
        version: v1
      annotations:
        sidecar.istio.io/proxyMemoryLimit: "1Gi"
        sidecar.istio.io/proxyCPULimit: "2"
        sidecar.istio.io/proxyMemory: "128Mi"
        sidecar.istio.io/proxyCPU: "10m"
    spec:
      serviceAccountName: dark-frost
      containers:
      - name: dark-frost
        image: ghcr.io/nmnellis/fake-service:v2
        ports:
        - containerPort: 8080
        securityContext:
          runAsUser: 1001
        resources:
          requests:
            memory: "100Mi"
            cpu: "10m"
---
apiVersion: v1
kind: Service
metadata:
  name: floral-frog
  namespace: ns-3
  labels:
    app: floral-frog
    tier: "4"
    seed: "1001"
spec:
  selector:
    app: floral-frog
  ports:
  - name: http
    protocol: TCP
    port: 8080
    targetPort: 8080
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: floral-frog-v1
  namespace: ns-3
  labels:
    app: floral-frog
    version: v1
    tier: "4"
    seed: "1001"
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
        app: floral-frog
        version: v1
  template:
    metadata:
      labels:
        app: floral-frog
        version: v1
      annotations:
        sidecar.istio.io/proxyMemoryLimit: "1Gi"
        sidecar.istio.io/proxyCPULimit: "2"
        sidecar.istio.io/proxyMemory: "128Mi"
        sidecar.istio.io/proxyCPU: "10m"
    spec:
      serviceAccountName: floral-frog
      containers:
      - name: floral-frog
        image: ghcr.io/nmnellis/fake-service:v2
        ports:
        - containerPort: 8080
        securityContext:
          runAsUser: 1001
        resources:
          requests:
            memory: "100Mi"
            cpu: "10m"
---
apiVersion: v1
kind: Service
metadata:
  name: hidden-night
  namespace: ns-3
  labels:
    app: hidden-night
    tier: "4"
    seed: "1001"
spec:
  selector:
    app: hidden-night
  ports:
  - name: http
    protocol: TCP
    port: 8080
    targetPort: 8080
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hidden-night-v1
  namespace: ns-3
  labels:
    app: hidden-night
    version: v1
    tier: "4"
    seed: "1001"
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
        app: hidden-night
        version: v1
  template:
    metadata:
      labels:
        app: hidden-night
        version: v1
      annotations:
        sidecar.istio.io/proxyMemoryLimit: "1Gi"
        sidecar.istio.io/proxyCPULimit: "2"
        sidecar.istio.io/proxyMemory: "128Mi"
        sidecar.istio.io/proxyCPU: "10m"
    spec:
      serviceAccountName: hidden-night
      containers:
      - name: hidden-night
        image: ghcr.io/nmnellis/fake-service:v2
        ports:
        - containerPort: 8080
        securityContext:
          runAsUser: 1001
        resources:
          requests:
            memory: "100Mi"
            cpu: "10m"
---
apiVersion: v1
kind: Service
metadata:
  name: long-dawn
  namespace: ns-3
  labels:
    app: long-dawn
    tier: "4"
    seed: "1001"
spec:
  selector:
    app: long-dawn
  ports:
  - name: http
    protocol: TCP
    port: 8080
    targetPort: 8080
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: long-dawn-v1
  namespace: ns-3
  labels:
    app: long-dawn
    version: v1
    tier: "4"
    seed: "1001"
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
        app: long-dawn
        version: v1
  template:
    metadata:
      labels:
        app: long-dawn
        version: v1
      annotations:
        sidecar.istio.io/proxyMemoryLimit: "1Gi"
        sidecar.istio.io/proxyCPULimit: "2"
        sidecar.istio.io/proxyMemory: "128Mi"
        sidecar.istio.io/proxyCPU: "10m"
    spec:
      serviceAccountName: long-dawn
      containers:
      - name: long-dawn
        image: ghcr.io/nmnellis/fake-service:v2
        ports:
        - containerPort: 8080
        securityContext:
          runAsUser: 1001
        resources:
          requests:
            memory: "100Mi"
            cpu: "10m"
---
apiVersion: v1
kind: Service
metadata:
  name: solitary-frost
  namespace: ns-3
  labels:
    app: solitary-frost
    tier: "3"
    seed: "1001"
spec:
  selector:
    app: solitary-frost
  ports:
  - name: http
    protocol: TCP
    port: 8080
    targetPort: 8080
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: solitary-frost-v1
  namespace: ns-3
  labels:
    app: solitary-frost
    version: v1
    tier: "3"
    seed: "1001"
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
        app: solitary-frost
        version: v1
  template:
    metadata:
      labels:
        app: solitary-frost
        version: v1
      annotations:
        sidecar.istio.io/proxyMemoryLimit: "1Gi"
        sidecar.istio.io/proxyCPULimit: "2"
        sidecar.istio.io/proxyMemory: "128Mi"
        sidecar.istio.io/proxyCPU: "10m"
    spec:
      serviceAccountName: solitary-frost
      containers:
      - name: solitary-frost
        image: ghcr.io/nmnellis/fake-service:v2
        ports:
        - containerPort: 8080
        securityContext:
          runAsUser: 1001
        resources:
          requests:
            memory: "100Mi"
            cpu: "10m"
---
apiVersion: v1
kind: Service
metadata:
  name: throbbing-darkness
  namespace: ns-3
  labels:
    app: throbbing-darkness
    tier: "5"
    seed: "1001"
spec:
  selector:
    app: throbbing-darkness
  ports:
  - name: http
    protocol: TCP
    port: 8080
    targetPort: 8080
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: throbbing-darkness-v1
  namespace: ns-3
  labels:
    app: throbbing-darkness
    version: v1
    tier: "5"
    seed: "1001"
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
        app: throbbing-darkness
        version: v1
  template:
    metadata:
      labels:
        app: throbbing-darkness
        version: v1
      annotations:
        sidecar.istio.io/proxyMemoryLimit: "1Gi"
        sidecar.istio.io/proxyCPULimit: "2"
        sidecar.istio.io/proxyMemory: "128Mi"
        sidecar.istio.io/proxyCPU: "10m"
    spec:
      serviceAccountName: throbbing-darkness
      containers:
      - name: throbbing-darkness
        image: ghcr.io/nmnellis/fake-service:v2
        ports:
        - containerPort: 8080
        securityContext:
          runAsUser: 1001
        resources:
          requests:
            memory: "100Mi"
            cpu: "10m"
---
