kustomize/manifests/app/frontend/istio-simulator/base/virtualservice.yaml

---
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: ingress-gw
  namespace: istio-system
  labels:
    seed: "1001"
spec:
  hosts:
    - "*"
  gateways:
  - istio-ingressgateway
  http:
  - name: "ns-1"
    match:
    - uri:
        prefix: "/ns-1"
    route:
    - destination:
        host: damp-sunset.ns-1.svc.cluster.local
        port:
          number: 8080
  - name: "ns-2"
    match:
    - uri:
        prefix: "/ns-2"
    route:
    - destination:
        host: withered-forest.ns-2.svc.cluster.local
        port:
          number: 8080
  - name: "ns-3"
    match:
    - uri:
        prefix: "/ns-3"
    route:
    - destination:
        host: cold-violet.ns-3.svc.cluster.local
        port:
          number: 8080
  - name: "ns-4"
    match:
    - uri:
        prefix: "/ns-4"
    route:
    - destination:
        host: aged-sunset.ns-4.svc.cluster.local
        port:
          number: 8080
  - name: "ns-5"
    match:
    - uri:
        prefix: "/ns-5"
    route:
    - destination:
        host: bold-wood.ns-5.svc.cluster.local
        port:
          number: 8080
---
